<resources>
    <string name="app_name">简易天气</string>
    <string name="welcome">欢迎进入简单天气</string>
    <string name="weather">weather</string>
    <string name="add_city">添加城市</string>
    <string name="close">关闭</string>
    <string name="open">打开</string>
    <string name="search_city">搜索城市</string>
    <string name="search_city_2">搜索城市...</string>
    <string name="city_list">城市列表</string>
    <string name="no_and_city">未添加城市</string>
    <string name="add_city_yet">暂未添加城市~</string>
    <string name="top_of_the_town">热门城市</string>
    <string name="about">关于</string>
    <string name="version">版本 </string>
    <string name="manage">管理</string>
    <string name="copy_success">复制成功</string>
    <string name="publish"> 发布</string>
    <string name="search_result">搜索结果</string>
    <string name="contact_author">联系作者:</string>
    <string name="click_copy">(点击复制)</string>
    <string name="mailbox">邮箱  :  </string>
    <string name="qq">814767713@qq.com</string>
    <string name="pm_2_5">PM2.5</string>
    <string name="pm_10">PM10</string>
    <string name="so2">SO2</string>
    <string name="no2">NO2</string>
    <string name="according_to_the_provinces_and_cities_to_choose">根据省市选择</string>
    <string name="and_city">空空如也~点击右上角添加城市</string>
    <string name="wind_direction">风向</string>
    <string name="wind_power">风力</string>
    <string name="day">白天</string>
    <string name="night">夜晚</string>
    <string name="at_night">晚间</string>
    <string name="notification">通知</string>
    <string name="notification_show">通知栏显示</string>
    <string name="notification_background">通知栏底色</string>
    <string name="closed">已关闭</string>
    <string name="opened">已开启</string>
    <string name="component">部件</string>
    <string name="table_component_color">桌面部件颜色</string>
    <string name="backstage">后台</string>
    <string name="the_background_automatically_update">后台自动更新</string>
    <string name="update_model">更新模式</string>
    <string name="update_frequency">更新频率</string>
    <string name="animation">动画</string>
    <string name="animation_50">转场动画 (Android 5.0+)</string>
    <string name="rest">其他</string>
    <string name="home_page_show">首页默认显示页</string>
    <string name="use_the_tips">使用小贴士</string>
    <string name="version_update_logcat">版本更新日志</string>
    <string name="about_author">关于 - 联系作者</string>
    <string name="temporarily_no_data">暂无数据</string>
    <string name="temporarily_no_data2">暂无数据~</string>
    <string name="no_air_quality_information">无空气质量信息</string>
    <string name="humidity">湿度</string>
    <string name="sunrise">日出</string>
    <string name="sunset">日落</string>
    <string name="during_the_day">日间</string>
    <string name="prompt">温馨提示 : </string>
    <string name="prompt_clothing">对比温度，今日可适当增减衣物。</string>
    <string name="init_the_plug">正在初始化插件</string>


    <string name="version_change_log">一、根据github上各位大神的分享所改编的\n\n二、这还只是1.0简易版本，只有晴天，其它天气背景待添加</string>
    <string name="use_assistant">一、使用助手\n\n1、主页面上半部下拉刷新天气\n\n2、左侧抽屉城市列表下拉刷新所有已添加城市天气\n\n二、注意\n\n1、如果通知栏出现字看不清的情况，请到APP设置中更换一下通知栏底色即可正常显示\n\n2、为了保证桌面部件和后台更新能正常工作，请将APP添加到系统或各安全软件白名单中以防后台服务被杀死\n\n三、彩蛋\n\n自定义背景,找一张图片，命名为weather，扔在SD卡根目录，然后重启APP即可~</string>

</resources>
